Attempt to fix page scrolling on mobile by changing min-height

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3498,11 +3498,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 html, body {
   height: 100%;
-  max-width: 100%;
-  overflow: auto; }
+  max-width: 100%; }
 
 body {
-  max-height: 100%;
   color: #f0f0f0;
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
